--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot==20.3
 aiohttp==3.8.5
-python-dotenv==1.0.0  # Если используете .env для конфигов
+python-dotenv==1.0.0 
 sqlite3
 logging
